adicionei novos titulos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>aula html 2</title>
 </head>
 <body>
-  <hi>titulo</hi>  
+  <h1>titulo feito pelo github</h1>  
+  <h2>titulo menor expressao</h2>
+  <h3>h3</h3>
+  <h4>h4</h4>
+  <h5>h5</h5>
 </body>
+<h2></h2>
 </html>
