--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h3>h3</h3>
   <h4>h4</h4>
   <h5>h5</h5>
+  <p>este é um paragrafo</p>
+  <p>aqui e um paragrafo</p>
 </body>
 <h2></h2>
 </html>
