adicionei uma pagina

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <h5>h5</h5>
   <p>este é um paragrafo</p>
   <p>aqui e um paragrafo</p>
+<a href="segundapagina.html">clique aqui para ir a nova pagina</a>
 </body>
 <h2></h2>
 </html>
